# airflow-training

./: .env  .gitignore  analysis.ipynb  analysis_heure.ipynb  data.json  data_hour.json  docker-compose.yaml  etl.py  pyproject.toml
