[tool.poetry]
name = "airflow-training"
version = "0.1.0"
description = ""
authors = ["piaf <1940947+lepiaf@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
plotly = "^5.6.0"
pandas = "^1.4.1"
pymongo = "^4.0.2"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
